force-app/main/default/objects/Scheduled_Batch_Execution__c/Scheduled_Batch_Execution__c.object-meta.xml
<CustomObject>
    <description>Tracks each single batch execution and records some summary of it.</description>
    <label>Scheduled Batch Execution</label>
    <nameField>
        <label>Batch Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Batch Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>