force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/AsyncApexJob_Id__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJob_Id__c</fullName>
    <description>Job id associated with the current async batch execution for linking purposes</description>
    <inlineHelpText>Job id associated with the current async batch execution for linking purposes</inlineHelpText>
    <label>AsyncApexJob Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>