force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Avg_DML_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Avg_DML_Per_Transaction__c</fullName>
    <label>Avg DML Per Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>