force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Batch_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_End_Time__c</fullName>
    <description>Batch Processing end time</description>
    <inlineHelpText>Batch Processing end time</inlineHelpText>
    <label>Batch End Time</label>
    <type>DateTime</type>
</CustomField>