force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Batch_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Start_Time__c</fullName>
    <description>Start Time of the batch</description>
    <inlineHelpText>Start Time of the batch</inlineHelpText>
    <label>Batch Start Time</label>
    <type>DateTime</type>
</CustomField>