force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message in case there are any failures or the processing is skipped</description>
    <inlineHelpText>Error message in case there are any failures or the processing is skipped</inlineHelpText>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>