force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Failed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Count__c</fullName>
    <description>Number of records failed</description>
    <inlineHelpText>Number of records failed</inlineHelpText>
    <label>Failed Record Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>