force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Max_DML_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Max_DML_per_Transaction__c</fullName>
    <label>Max DML per Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>