force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Min_DML_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Min_DML_per_Transaction__c</fullName>
    <description>A batch execution typically involves multiple transactions. This will indicate Min DML processed in a transaction.</description>
    <inlineHelpText>A batch execution typically involves multiple transactions. This will indicate Min DML processed in a transaction.</inlineHelpText>
    <label>Min DML per Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>