force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Number_of_Apex_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Apex_Transactions__c</fullName>
    <description>A typical batch will execute as multiple transactions with the scope size set by the caller. This is the total number of transactions happened within a batch.</description>
    <inlineHelpText>A typical batch will execute as multiple transactions with the scope size set by the caller. This is the total number of transactions happened within a batch.</inlineHelpText>
    <label>Number of Apex Transactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>