force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Number_of_DMLs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DMLs__c</fullName>
    <description>Total number of DMLs executed in the batch. This data point will be helpful especially for cleanup batches.</description>
    <inlineHelpText>Total number of DMLs executed in the batch. This data point will be helpful especially for cleanup batches.</inlineHelpText>
    <label>Number of DMLs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>