force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Number_of_DMLs_Successful__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DMLs_Successful__c</fullName>
    <label>Number of DMLs Successful</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>