force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Processed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Record_Count__c</fullName>
    <description>Total number of records processed by the batch, the records depends on the processing performed by the batch.</description>
    <inlineHelpText>Total number of records processed by the batch, the records depends on the processing performed by the batch.</inlineHelpText>
    <label>Processed Record Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>