force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Scheduled_Batch__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Batch</label>
    <referenceTo>Scheduled_Batch__c</referenceTo>
    <relationshipLabel>Scheduled Batch Executions</relationshipLabel>
    <relationshipName>Scheduled_Batch_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>