force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the current execution</description>
    <inlineHelpText>Status of the current execution</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUED</fullName>
                <default>true</default>
                <label>QUEUED</label>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>