force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Time_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Time_Window_End__c</fullName>
    <description>Batch execution sometimes do time based record processing - like recent records or old ones for cleanup. This field will indicate end time of the execution.</description>
    <inlineHelpText>Batch execution sometimes do time based record processing - like recent records or old ones for cleanup. This field will indicate end time of the execution.</inlineHelpText>
    <label>Time Window End</label>
    <type>DateTime</type>
</CustomField>