force-app/main/default/objects/Scheduled_Batch_Execution__c/fields/Time_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Time_Window_Start__c</fullName>
    <description>Batch execution sometimes do time based record processing - like recent records or old ones for cleanup. This field will indicate start time of the last execution.</description>
    <inlineHelpText>Batch execution sometimes do time based record processing - like recent records or old ones for cleanup. This field will indicate start time of the last execution.</inlineHelpText>
    <label>Time Window Start</label>
    <type>DateTime</type>
</CustomField>